# Fraud-Detection_Environment

./: .graphify_detect.json  Dockerfile  README.md  app.py  app_ui.py  env.py  features.py  fraud_sim (1).html  grader.py  inference.py  models.py  openenv.yaml  package-lock.json  pyproject.toml  reward_engine.py  test_explain.py  vite.config.js
frontend/: README.md  index.html  package.json  tailwind.config.js
frontend/src/: App.tsx  styles.css
frontend/src/components/: Card.tsx  MetricCard.tsx  SectionHeader.tsx
frontend/src/data/: mock.ts
frontend/src/layouts/: AppLayout.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: DashboardPage.tsx  DetectionPage.tsx  HowItWorksPage.tsx  InsightsPage.tsx  LandingPage.tsx
frontend/src/types/: backend.ts
server/: app.py
src/: App.jsx
src/components/: SectionHeader.jsx
src/pages/: DetectionPage.jsx  LandingPage.jsx
tasks/: __init__.py  easy.py  hard.py  medium.py
tests/: test_env.py
