[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fraud-detection-env"
version = "0.1.0"
description = "Adaptive Phishing & Fraud Detection OpenEnv Environment"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Fraud Detection OpenEnv Team" }
]
keywords = ["openenv", "reinforcement-learning", "fraud-detection", "phishing", "cybersecurity"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.scripts]
server = "server.app:main"
fraud-env = "app:app"

[project.urls]
Homepage = "https://huggingface.co/spaces/fraud-detection-openenv"
Repository = "https://github.com/fraud-detection-openenv/fraud-detection-openenv"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true
